--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ astunparse==1.6.3
 attrs==22.2.0
 blinker==1.5
 cachetools==5.3.0
+gdown==4.5.1
 certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
